--- a/src/component/product_listing/product_1.css
+++ b/src/component/product_listing/product_1.css
@@ -1,36 +1,45 @@
 .product {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    align-items: center;
-    justify-content: flex-end;
-    margin: 10px;
-    padding: 20px;
-    width: 100%;
-    max-height: 400px;
-    min-width: 100px;
-    z-index: 1;
-}
-.product__image {
-    max-height: 200px;
-    width: 100%;
-    object-fit: contain;
-    margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 10px;
+  padding: 20px;
+  width: 100%;
+  max-height: 400px;
+  min-width: 100px;
+  z-index: 1;
 }
 
-.product__info{
-    height: 100px;
-    margin-bottom: 15px;
+.product__info {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 15px;
+}
+
+.product__image {
+  max-height: 200px;
+  width: 100%;
+  object-fit: contain;
+  margin-bottom: 15px;
 }
 
 .product__price {
-    margin-top: 5px;
+  margin-top: 5px;
+}
+
+.starIcon__color {
+  color: #ff9900;
 }
 
 .product__button {
-    background: #f0c14b;
-    border: 1px solid;
-    margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
-    color: #111;
+  background: #f0c14b;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: #a88734 #9c7e31 #846a29;
+  color: #111;
+  display: block;
+  margin: 10px auto;
+  text-align: center;
 }
